Fixed cursor alignment

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
 
-body {
-  background-color: white;
+body,
+html {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
-.easel {
-  height: 100vh;
+#drawingArea {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f0f0f0;
+  user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.text {
+#text {
   font-family: 'Silkscreen', sans-serif;
   color: #b3b3b3;
-  text-align: center;
-  padding-top: 10px;
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 2s, opacity 0.25s linear;
 }
